unpackaged/main/default/objects/Identity_Verification__c/Identity_Verification__c.object-meta.xml
<CustomObject>
    <label>Identity Verification</label>
    <nameField>
        <displayFormat>IDN-{0000000}</displayFormat>
        <label>Identity Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identity Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>