unpackaged/main/default/objects/Identity_Verification__c/fields/Bank_Verification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bank_Verification_Flag__c</fullName>
    <label>Bank Verification Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>