unpackaged/main/default/objects/Identity_Verification__c/fields/check_match__c.field-meta.xml
<CustomField>
    <fullName>check_match__c</fullName>
    <label>check_match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>