unpackaged/main/default/objects/Identity_Verification__c/fields/Identity_Verification__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verification__c</fullName>
    <label>Identity Verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>