unpackaged/main/default/objects/Identity_Verification__c/fields/Income_Verification_Flag__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification_Flag__c</fullName>
    <description>Income Verification is Completed</description>
    <label>Income Verification Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>