unpackaged/main/default/objects/Identity_Verification__c/fields/Precise_Account_Opening_Status__c.field-meta.xml
<CustomField>
    <fullName>Precise_Account_Opening_Status__c</fullName>
    <label>Precise - Account Opening Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Not Performed</fullName>
                <default>true</default>
                <label>Not Performed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>