unpackaged/main/default/objects/Identity_Verification__c/fields/TLO_Link__c.field-meta.xml
<CustomField>
    <fullName>TLO_Link__c</fullName>
    <label>TLO Link</label>
    <type>Url</type>
</CustomField>