unpackaged/main/default/objects/Identity_Verification__c/fields/TLO_Link_formula__c.field-meta.xml
<CustomField>
    <fullName>TLO_Link_formula__c</fullName>
    <formula>'https://' +  $Setup.TLO_URL_Config__c.TLO_URL__c  +'/'+ $Setup.TLO_URL_Config__c.TLOURLappname__c + '/tlo?lead_id=' + Application__r.LEAD_ID_ExtKey__c +'&amp;member_id='+ Application__r.Member_ID__c +'&amp;user_id='+  $User.Id + check_match__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TLO Link formula</label>
    <type>Text</type>
</CustomField>