unpackaged/main/default/objects/Identity_Verification__c/fields/TLO_Status__c.field-meta.xml
<CustomField>
    <fullName>TLO_Status__c</fullName>
    <label>TLO Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Performed</fullName>
            </value>
            <value>
                <fullName>Not Performed</fullName>
                <default>true</default>
                <label>Not Performed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>