unpackaged/main/default/objects/Identity_Verification__c/validationRules/Identity_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Identity_Verification</fullName>
    <active>false</active>
    <errorConditionFormula>AND(   
   ISCHANGED(Identity_Verification__c ),
   ISPICKVAL(Identity_Verification__c, "PASS"),  
   count__c &lt;= 3
)</errorConditionFormula>
    <errorMessage>Identity Verification Cannot be Done.</errorMessage>
</ValidationRule>